; ModuleID = '/home/carl/AnghaBench/libui/test/extr_page2.c_moveLabel.c'
source_filename = "/home/carl/AnghaBench/libui/test/extr_page2.c_moveLabel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@movingCurrent = common dso_local global i32 0, align 4
@movingBoxes = common dso_local global i32* null, align 8
@movingLabel = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @moveLabel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @moveLabel(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @movingCurrent, align 4
  store i32 %7, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 1, i32* %6, align 4
  br label %11

11:                                               ; preds = %10, %2
  %12 = load i32*, i32** @movingBoxes, align 8
  %13 = load i32, i32* %5, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @uiBoxDelete(i32 %16, i32 0)
  %18 = load i32*, i32** @movingBoxes, align 8
  %19 = load i32, i32* %6, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @movingLabel, align 4
  %24 = call i32 @uiControl(i32 %23)
  %25 = call i32 @uiBoxAppend(i32 %22, i32 %24, i32 0)
  %26 = load i32, i32* %6, align 4
  store i32 %26, i32* @movingCurrent, align 4
  ret void
}

declare dso_local i32 @uiBoxDelete(i32, i32) #1

declare dso_local i32 @uiBoxAppend(i32, i32, i32) #1

declare dso_local i32 @uiControl(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
